crates/shiplog-workstream-cluster/tests/snapshots/snapshot__empty_workstreams.snap
---
source: crates/shiplog-workstream-cluster/tests/snapshot.rs
assertion_line: 92
expression: ws.workstreams
---
[]
